[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "extremeflash"
dynamic = ["version"]

description = ""
readme = "README.md"
license = "GPL-3.0-only"
authors = [
  {name = "Grische", email = "github@grische.xyz"},
  {name = "Florian Maurer", email = "fmaurer@disroot.org"}
]
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
  "tftpy>=0.8.2",
  "paramiko>=3.0.0",
  "scp>=0.14.5,<0.16.0"
]


[project.scripts]
extremeflash = "extremeflash.__main__:run"

[project.optional-dependencies]
dev = [
  "mypy>=1.16.1",
  "types-paramiko>=3.0.0.4",
  "ruff>=0.12.0"
]

[tool.setuptools]
packages = ["extremeflash"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pylint.MAIN]
max-line-length = 120
disable = [
  "logging-fstring-interpolation",
  "missing-function-docstring"
]
fail-under = 9.5
fail-on = ["E"]
recursive = true

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["serial.*", "scp.*", "tftpy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "G", "PIE"]
ignore = ["E501", "G004", "E731"]

