[tool.poetry]
name = "extremeflash"
version = "0.1.0"
description = ""
authors = ["Grische <2787581+grische@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "extremeflash"}]

[tool.poetry.dependencies]
python = "^3.9.2"
pyserial = "^3.5"
tftpy = "^0.8.2"
paramiko = "^3.0.0"
scp = ">=0.14.5,<0.16.0"

[tool.poetry.scripts]
extremeflash = "extremeflash.__main__:run"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.1,<8.0"
mypy = "^1.16.1"
pylint = "^3.0.2"
types-paramiko = "^4.0.0.20250822"
black = ">=23.11,<26.0"
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MAIN']
max-line-length = 120
disable = [
    "logging-fstring-interpolation",
    "missing-function-docstring",
]
fail-under = 9.5
fail-on = [
    "E", # any error
]
recursive = true

[[tool.mypy.overrides]]
module = [
    "serial.*",
    "scp.*",
    "tftpy.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 15   # Recommended: 10

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "G", "PL", "FURB", "LOG", "C90", "EXE"]
ignore = ["G004", "LOG015", "PLR"]
