[project]
name = "extremeflash"
description = "Automated flashing tool for Extreme Networks / Enterasys access points."
license = "GPL-3.0-only"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Grische", email = "2787581+grische@users.noreply.github.com" },
]
requires-python = '>=3.9.2,<4'
dependencies = [
    'pyserial>=3.5,<4.0',
    'tftpy>=0.8.2,<0.9.0',
    'paramiko>3,<4',
    'scp>=0.14.5,<0.16.0',
]

[project.scripts]
extremeflash = "extremeflash.__main__:run"

[project.urls]
Homepage = "https://github.com/grische/extremeflash"
Source = "https://github.com/grische/extremeflash.git"
"Release Notes" = "https://github.com/grische/extremeflash/releases"
Issues = "https://github.com/grische/extremeflash/issues"

[tool.poetry]
version = "0.1.0"
packages = [{ include = "extremeflash" }]

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.1,<8.0"
mypy = "^1.18.2"
pylint = "^3.3.9"
types-paramiko = ">3,<4"
black = ">=23.11,<26.0"
ruff = "^0.13.2"

[build-system]
requires = ['poetry-core>=2.0']
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MAIN']
max-line-length = 120
disable = [
    "logging-fstring-interpolation",
    "missing-function-docstring",
]
fail-under = 9.5
fail-on = [
    "E", # any error
]
recursive = true

[[tool.mypy.overrides]]
module = [
    "serial.*",
    "scp.*",
    "tftpy.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 15   # Recommended: 10

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "G", "PL", "FURB", "LOG", "C90", "EXE"]
ignore = ["G004", "LOG015", "PLR"]
